--- a/Savio/ImpulseSavingView/SAImpulseSavingViewController.xib
+++ b/Savio/ImpulseSavingView/SAImpulseSavingViewController.xib
@@ -134,7 +134,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="80" id="hx5-g9-mRO"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
+                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="32"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -168,8 +168,11 @@
                                             </connections>
                                         </textField>
                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vso-oK-UIB">
-                                            <rect key="frame" x="70" y="40" width="90" height="25"/>
-                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
+                                            <rect key="frame" x="70" y="40" width="90" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="V25-Nx-VHK"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="32"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -197,6 +200,7 @@
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
+                                            <exclude reference="jhW-Ss-kwJ"/>
                                             <exclude reference="sBj-Uz-rSR"/>
                                             <exclude reference="sxP-zL-ZRS"/>
                                         </mask>
